Developer/src/objects/DueDateCalendar__c.object
<CustomObject>
    <fields>
        <fullName>CycleName__c</fullName>
        <label>サイクル</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueName__c</fullName>
        <label>項目名</label>
        <picklist>
            <picklistValues>
                <fullName>発券開始日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTL告知日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTLフィードバック開始</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Japan_ID__c</fullName>
        <externalId>true</externalId>
        <label>Japan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitTime__c</fullName>
        <label>期限日時</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RGB__c</fullName>
        <label>RGB</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>DueDateCalendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DueName__c</columns>
        <columns>Day__c</columns>
        <columns>CycleName__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>DueDateCalendar名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>